# Chat

./: .gitignore  Dockerfile  Makefile  package-lock.json  package.json  requirements.txt
backend/: main.py  pyproject.toml
backend/enums/: chatEnum.py
backend/redis/: README.md  redis_conn.py
backend/redis_cli/: redis_conn.py
backend/router/: __init__.py  auth.py  detail.py  nty.py  profile.py  user.py  utils.py  ws_conn.py
backend/sql/: crud.py  database.py  nty_crud.py  profile_crud.py  schemas.py  table.py  user_crud.py
frontend/: .prettierrc  README.md  package-lock.json  package.json
frontend/config/: webpack.config.js
frontend/public/: index.html
frontend/src/: index.js  logPage.js
frontend/src/apis/: useLogin.js
frontend/src/components/: container.js  container_utils.js  logPage.js
frontend/src/components/LogPage/: logPage.js
frontend/src/components/friendlist/: friend.js  friendlist.js  upperinput.js
frontend/src/components/members/: member_unit.js  members.js  rightbar.js
frontend/src/fetchers/: urls.js
frontend/src/friendlist/: friendlist.js
frontend/src/hooks/: useAlert.js  useLogin.js
frontend/src/members/: members.js
frontend/src/middlechat/: middlechat.js  unopen.js
frontend/src/websockets/: firstload.js  getRealtime.js  getRealtimeData.js
public/: index.html
src/: container.js  index.js  logPage.js
src/friendlist/: friend.js  friendlist.js
src/members/: member_unit.js  members.js
src/middlechat/: chatroom.js  middlechat.js  unopen.js
src/middlechat/chatroom/: chatinfo.js  downbuts.js  mymsg.js  osmsg.js
(+33 files in other folders)
